Fix overflowing buttons on case study page

--- a/src/_includes/css/grid.css
+++ b/src/_includes/css/grid.css
@@ -4,12 +4,13 @@
   padding-inline: 0;
   gap: 1rem;
   flex-wrap: wrap;
+  margin-inline-start: 0;
 
   & > * {
     padding-block: 0;
     flex-basis: 20rem;
     flex-grow: 1;
-    flex-shrink: 0;
+    flex-shrink: 1;
 
     & > .block {
       height: 100%;
